# moku.blog

./: .env.example  .gitignore  .releaserc.json  LICENSE  README.md  manage.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: lint.yaml  test.yaml
moku/: __init__.py  admin.py  constants.py  filters.py  images.py  markdown.py  middleware.py  utils.py  validators.py
moku/config/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
moku/forms/: auth.py  post.py  recipe.py  user.py
moku/locale/lio/LC_MESSAGES/: django.po
moku/locale/tok/LC_MESSAGES/: django.po
moku/migrations/: 0001_initial.py  0002_post.py  0003_user_avatar.py  0004_alter_post_verb.py  0005_usersettings.py  0006_recipe_post_recipe_recipestep.py  0007_add_lami_lioa_to_languages.py  0008_blogpost.py  0009_alter_recipestep_instructions.py  0010_alter_recipe_title.py  0011_user_language_delete_usersettings.py
moku/models/: __init__.py  blog.py  post.py  recipe.py  user.py
moku/static/css/: moku.css
moku/templates/moku/: base.jinja  blog.jinja  changelog.jinja  delete.jinja  feed.jinja  login.jinja  privacy.jinja  settings.jinja  signup.jinja  terms.jinja
moku/templates/moku/error/: 403.jinja  404.jinja  500.html
moku/templates/moku/post/: edit.jinja  index.jinja
moku/templates/moku/profile/: edit.jinja  show.jinja
moku/templates/moku/recipe/: edit_step.jinja  form.jinja  index.jinja  show.jinja
moku/tests/: conftest.py  test_post.py  test_user.py
moku/views/: auth.py  base.py  blog.py  error.py  post.py  recipe.py  static.py  user.py
(+3 files in other folders)
